--- a/gb/12/7/3/n3626363.md
+++ b/gb/12/7/3/n3626363.md
@@ -1,21 +1,21 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/harlek3030/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/harlek3030/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/harlek3030/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/harlek3030/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/harlek3030/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/harlek3030/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/harlek3030/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/harlek3030/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/harlek3030/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/harlek3030/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/harlek3030/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/harlek3030/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/harlek3030/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/harlek3030/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/harlek3030/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/harlek3030/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/harlek3030/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/harlek3030/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/harlek3030/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/harlek3030/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/harlek3030/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/harlek3030/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/harlek3030/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/harlek3030/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/harlek3030/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/harlek3030/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/harlek3030/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/harlek3030/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/harlek3030/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/harlek3030/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/harlek3030/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/harlek3030/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/harlek3030/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/harlek3030/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/harlek3030/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/harlek3030/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/harlek3030/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/harlek3030/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/harlek3030/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/harlek3030/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/harlek3030/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/harlek3030/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/harlek3030/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/harlek3030/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/harlek3030/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/harlek3030/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/harlek3030/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>法轮功首次尼亚加拉游行 华人称震撼</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2012/07/1207021754031814-600x400.jpg" />
 <h6>图：7月1日，多伦多天国乐团首次在尼亚加拉瀑布参加国庆游行，令华人观众感到“振奋人心”（摄影：艾文/大纪元）
 </h6>
 <hr>
-	<p>【大纪元2012年07月03日讯】(大纪元记者张莹加拿大报导)2012年7月1日，多伦多<ahref="https://github.com/harlek3030/djy/blob/master/gb/tag/%E5%A4%A9%E5%9B%BD%E4%B9%90%E5%9B%A2.md#1">天国乐团</a>参加了2场加拿大国庆游行，上午9点在尼亚加拉瀑布（Niagara falls），下午4点在多伦多的士嘉堡（Scarborough）。在尼亚加拉瀑布的<ahref="https://github.com/harlek3030/djy/blob/master/gb/tag/%E5%8D%8E%E4%BA%BA.md#1">华人</a>第一次看到<ahref="https://github.com/harlek3030/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>学员的队伍，连称“震撼”，“振奋人心”，表示要多了解法轮功。</p>
-<p><B> <ahref="https://github.com/harlek3030/djy/blob/master/gb/tag/%E5%8D%8E%E4%BA%BA.md#1">华人</a>感谢<ahref="https://github.com/harlek3030/djy/blob/master/gb/tag/%E5%A4%A9%E5%9B%BD%E4%B9%90%E5%9B%A2.md#1">天国乐团</a>带来美好信息</B></p>
+	<p>【大纪元2012年07月03日讯】(大纪元记者张莹加拿大报导)2012年7月1日，多伦多<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A4%A9%E5%9B%BD%E4%B9%90%E5%9B%A2.md#1">天国乐团</a>参加了2场加拿大国庆游行，上午9点在尼亚加拉瀑布（Niagara falls），下午4点在多伦多的士嘉堡（Scarborough）。在尼亚加拉瀑布的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%8D%8E%E4%BA%BA.md#1">华人</a>第一次看到<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>学员的队伍，连称“震撼”，“振奋人心”，表示要多了解法轮功。</p>
+<p><B> <ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%8D%8E%E4%BA%BA.md#1">华人</a>感谢<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A4%A9%E5%9B%BD%E4%B9%90%E5%9B%A2.md#1">天国乐团</a>带来美好信息</B></p>
 <p>多伦多天国乐团第一次应邀到150公里外的尼亚加拉瀑布参加国庆节游行，使当地观众开了眼界，华人观众更表示“振奋人心”及“感谢”。</p>
-<p>来自浙江的马女士带着孩子和朋友一起观看游行，她说：“来加拿大三年了，第一次看到<ahref="https://github.com/harlek3030/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>队伍，这么壮观。在国内时听到的都是说法轮功不好的信息，现在看到了，非常振奋人心。我会上网多了解一些情况。”</p>
+<p>来自浙江的马女士带着孩子和朋友一起观看游行，她说：“来加拿大三年了，第一次看到<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>队伍，这么壮观。在国内时听到的都是说法轮功不好的信息，现在看到了，非常振奋人心。我会上网多了解一些情况。”</p>
 <p>她旁边的吴女士来自上海，也是带着孩子在观看。吴女士说：“真是太令人震撼了，非常整齐，令人耳目一新，是所有队伍中最壮观的。”</p>
 <p>来自香港的Michelle说：“当我一看到这么多华人的队伍时，我很惊讶，也很激动，就想哪来这么大阵容的华人乐队呢？音乐优美，服装颜色令人舒服，队伍整齐，总而言之，就是好！谢谢他们这么远给我们带来美好的信息。”</p>
 <p>
 	<figure id="attachment_6601774" aria-describedby="caption-attachment-6601774" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2012/07/1207021754131814-600x450.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2012/07/1207021754131814-600x450.jpg" alt="图：来自香港的Michelle（左）感谢天国乐团带来美好信息（摄影：张莹/大纪元）" title="图：来自香港的Michelle（左）感谢天国乐团带来美好信息（摄影：张莹/大纪元）" width="600" b="450"
-	class="size-large wp-image-6601774" /></a><figcaption id="caption-attachment-6601774" class="wp-caption-text">图：来自香港的Michelle（左）感谢天国乐团带来美好信息（摄影：张莹/大纪元）</figcaption></figure><br />游行接近终点时，一位女士跟着天国乐团走到最后，向队员询问什么是“<ahref="https://github.com/harlek3030/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%A4%A7%E6%B3%95.md#1">法轮大法</a>”。这位名叫Laura的女士对记者说：“我90岁的母亲坐在那边，当这个队伍经过的时候，她很兴奋，也很激动。她说这是一支她看到的最好的乐队，要我来帮她问清楚这个乐团情况，想知道什么是‘法轮大法’。” </p>
-<p>Laura说，她会上网去了解<ahref="https://github.com/harlek3030/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%A4%A7%E6%B3%95.md#1">法轮大法</a>。</p>
+	class="size-large wp-image-6601774" /></a><figcaption id="caption-attachment-6601774" class="wp-caption-text">图：来自香港的Michelle（左）感谢天国乐团带来美好信息（摄影：张莹/大纪元）</figcaption></figure><br />游行接近终点时，一位女士跟着天国乐团走到最后，向队员询问什么是“<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%A4%A7%E6%B3%95.md#1">法轮大法</a>”。这位名叫Laura的女士对记者说：“我90岁的母亲坐在那边，当这个队伍经过的时候，她很兴奋，也很激动。她说这是一支她看到的最好的乐队，要我来帮她问清楚这个乐团情况，想知道什么是‘法轮大法’。” </p>
+<p>Laura说，她会上网去了解<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%A4%A7%E6%B3%95.md#1">法轮大法</a>。</p>
 <p>
 	<figure id="attachment_6601794" aria-describedby="caption-attachment-6601794" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2012/07/1207021753521814-600x450.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2012/07/1207021753521814-600x450.jpg" alt="图：Laura称，要去了解法轮功（摄影：张莹/大纪元）" title="图：Laura称，要去了解法轮功（摄影：张莹/大纪元）" width="600" b="450"
 	class="size-large wp-image-6601794" /></a><figcaption id="caption-attachment-6601794" class="wp-caption-text">图：Laura称，要去了解法轮功（摄影：张莹/大纪元）</figcaption></figure><br />尼加拉瓜居民Henry 和Ken跟着乐团的队伍拍照，Henry说：“音乐美好，节奏强；队伍整齐，颜色醒目。这个乐团是适合今天这个日子的最好元素组合。”</p>
@@ -52,41 +52,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/harlek3030/djy/blob/master/gb/12/6/26/n3621262.md#1">卢法真：江泽民和中共是镇压法轮功的共犯</a></li>
-<li><a href="https://github.com/harlek3030/djy/blob/master/gb/12/7/1/n3624931.md#1">世间奇迹 世界绝症胰腺癌神秘消失</a></li>
-<li><a href="https://github.com/harlek3030/djy/blob/master/gb/12/7/1/n3624965.md#1">雪峰：中国人的选择</a></li>
-<li><a href="https://github.com/harlek3030/djy/blob/master/gb/12/7/2/n3625595.md#1">蒙市加拿大国庆游行 天国乐团感动观众</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/12/6/26/n3621262.md#1">卢法真：江泽民和中共是镇压法轮功的共犯</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/12/7/1/n3624931.md#1">世间奇迹 世界绝症胰腺癌神秘消失</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/12/7/1/n3624965.md#1">雪峰：中国人的选择</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/12/7/2/n3625595.md#1">蒙市加拿大国庆游行 天国乐团感动观众</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/harlek3030/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/11/n10047238.md#1" target="_blank">曾伯炎：右派，在中国古拉格的生死劫</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/31/n11014025.md#1" target="_blank">绝处逢生 79岁老军医讲述的亲身经历</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/2/n10947448.md#1" target="_blank">晓明：与晏乐斌先生谈广西屠杀及文革“处遗”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/11/20/n8510885.md#1" target="_blank">哈尔滨一位大学教师17年的坚持</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/harlek3030/djy/blob/master/gb/21/4/4/n12857839.md#1">杨威：三星堆新发现 冲击进化论无神论</a></li>
-<li><a href="https://github.com/harlek3030/djy/blob/master/gb/21/3/29/n12844310.md#1">金言：改写历史？三星堆掀文明起源争论</a></li>
-<li><a href="https://github.com/harlek3030/djy/blob/master/gb/21/4/1/n12852292.md#1">【未解之谜】史前杰作？月亮七大谜团（下）</a></li>
-<li><a href="https://github.com/harlek3030/djy/blob/master/gb/21/4/3/n12856808.md#1">【小宇宙传说】人体能量场的奥秘</a></li>
-<li><a href="https://github.com/harlek3030/djy/blob/master/gb/21/4/6/n12861114.md#1">自称死过三次 女网红：人死后时间变得很慢</a></li>
-<li><a href="https://github.com/harlek3030/djy/blob/master/gb/21/4/8/n12867070.md#1">【财商天下】超规模经济刺激 拜登抢中共的路？</a></li>
-<li><a href="https://github.com/harlek3030/djy/blob/master/gb/21/4/8/n12865699.md#1">【拍案惊奇】台铁出轨疑点 美航母现身山东号缩头</a></li>
-<li><a href="https://github.com/harlek3030/djy/blob/master/gb/21/4/8/n12867989.md#1">【珍言真语】张怀烈：中共制造恐怖 恐吓港民</a></li>
-<li><a href="https://github.com/harlek3030/djy/blob/master/gb/21/4/7/n12864525.md#1">中共狂拨16电话施压 帕劳总统：再不接了</a></li>
-<li><a href="https://github.com/harlek3030/djy/blob/master/gb/21/4/7/n12864297.md#1">遭强暴报案无人管 山东13岁女孩发视频求助</a></li>
-<li><a href="https://github.com/harlek3030/djy/blob/master/gb/21/4/7/n12864809.md#1">北斗定位掉线罚款2千 冀货车司机愤而自杀</a></li>
-<li><a href="https://github.com/harlek3030/djy/blob/master/gb/21/4/8/n12867529.md#1">全昭旻无惧中共小粉红狙击 35岁生日晒Nike鞋</a></li>
-<li><a href="https://github.com/harlek3030/djy/blob/master/gb/21/4/7/n12862621.md#1">当爸后被吐槽身材发福 吴奇隆瘦身近照曝光</a></li>
-<li><a href="https://github.com/harlek3030/djy/blob/master/gb/21/4/8/n12865432.md#1">赵又廷片场探班高圆圆 两人手拉手聊天超甜蜜</a></li>
-<li><a href="https://github.com/harlek3030/djy/blob/master/gb/21/4/6/n12862148.md#1">华人导演第一人 李安获英国奥斯卡终身成就奖</a></li>
-<li><a href="https://github.com/harlek3030/djy/blob/master/gb/21/4/8/n12867670.md#1">自曝遭刘嘉玲删微信好友 杨颖解释缘由引热议</a></li>
-<li><a href="https://github.com/harlek3030/djy/blob/master/gb/21/4/6/n12861228.md#1">维生素B群白天提神 晚上助眠 营养师教你这样吃</a></li>
-<li><a href="https://github.com/harlek3030/djy/blob/master/gb/21/4/2/n12853238.md#1">跳绳减肥比健走慢跑都好 还防骨松 教你正确做</a></li>
-<li><a href="https://github.com/harlek3030/djy/blob/master/gb/21/4/4/n12858173.md#1">三高过敏等10种人 能打新冠疫苗吗？2类人不能打</a></li>
-<li><a href="https://github.com/harlek3030/djy/blob/master/gb/21/4/5/n12859432.md#1">冬粉是减肥良伴！掌握2关键正确吃 不挨饿就能瘦</a></li>
-<li><a href="https://github.com/harlek3030/djy/blob/master/gb/21/4/7/n12863360.md#1">NASA在火星上拍到彩虹高挂天空？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688941.md#1">【秦鹏直播】乌克兰反攻开始？欧盟警告北京</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689405.md#1">【财商天下】水泥地种粮食 中国复耕“大跃进”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690909.md#1">【马克时空】上百俄机被乌击落 战机如何发现导弹来袭?</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685151.md#1">玄彬与孙艺真本日于首尔结婚 婚礼照笑容灿烂</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686756.md#1">巨星布鲁斯威利患失语症 医：警惕2大原因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/harlek3030/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/harlek3030/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/12/7/3/n3626363.htm">法轮功首次尼亚加拉游行 华人称震撼</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/12/7/3/n3626363.htm">法轮功首次尼亚加拉游行 华人称震撼</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/harlek3030/djy/blob/master/gb/12/7/3/n3626363.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/harlek3030/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/harlek3030/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/harlek3030/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/harlek3030/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/harlek3030/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/harlek3030/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/harlek3030/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/harlek3030/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/harlek3030/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/harlek3030/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/harlek3030/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/harlek3030/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/harlek3030/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/harlek3030/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/harlek3030/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/harlek3030/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/harlek3030/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/harlek3030/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/harlek3030/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/harlek3030/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/harlek3030/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/harlek3030/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/harlek3030/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/harlek3030/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/harlek3030/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/harlek3030/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/harlek3030/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/harlek3030/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/harlek3030/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/harlek3030/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/harlek3030/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/harlek3030/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/harlek3030/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/harlek3030/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/harlek3030/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/harlek3030/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/harlek3030/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/harlek3030/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/harlek3030/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/harlek3030/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/harlek3030/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/harlek3030/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/harlek3030/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/harlek3030/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/harlek3030/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/harlek3030/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/harlek3030/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/harlek3030/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/12/7/3/n3626363.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
